...
			android:inputType="textUri"
			android:paddingEnd="48dp"
			android:text="@string/http" />
	</com.google.android.material.textfield.TextInputLayout>

	<ImageButton
		android:id="@+id/delete"
		style="@style/Widget.MaterialComponents.Button.TextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical|end"
		android:layout_marginEnd="6dp"
		android:layout_marginBottom="6dp"
		android:minWidth="0dp"
		android:contentDescription="@string/Modal_Delete"
		android:rotation="45"
		android:src="@drawable/add_circle_outline"
		app:tint="@color/color_red8" />
</FrameLayout>

