...
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		android:layout_weight="2"
		android:orientation="vertical">

		<TextView
			android:id="@+id/failedMeasurements"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:drawableStart="@drawable/exclamation_18dp"
			android:drawablePadding="8dp"
			android:gravity="center_vertical"
			android:textColor="@color/color_orange8" />

		<TextView
			android:id="@+id/okMeasurements"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:drawableStart="@drawable/tick_black_18dp"
			android:drawablePadding="8dp"
			android:gravity="center_vertical" />
	</LinearLayout>
...
