<?xml version="1.0" encoding="utf-8"?>
<TextView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/textView"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:padding="16dp" />